syntax.output
Grammar

    0 $accept: Program $end

    1 Program: ExtDefList
    2        | ExtDefList error

    3 ExtDefList: ExtDef ExtDefList
    4           | /* empty */

    5 ExtDef: Specifier ExtDecList SEMI
    6       | Specifier SEMI
    7       | Specifier FunDec CompSt
    8       | Specifier FunDec SEMI
    9       | Specifier ExtDecList error

   10 ExtDecList: VarDec
   11           | VarDec COMMA ExtDecList

   12 Specifier: TYPE
   13          | StructSpecifier

   14 StructSpecifier: STRUCT OptTag LC DefList RC
   15                | STRUCT Tag

   16 OptTag: ID
   17       | /* empty */

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB

   21 FunDec: ID LP VarList RP
   22       | ID LP RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC

   27 StmtList: Stmt StmtList
   28         | /* empty */

   29 Stmt: Exp SEMI
   30     | CompSt
   31     | RETURN Exp SEMI
   32     | IF LP Exp RP Stmt
   33     | IF LP Exp RP Stmt ELSE Stmt
   34     | WHILE LP Exp RP Stmt
   35     | SEMI
   36     | error SEMI
   37     | Exp error

   38 DefList: Def DefList
   39        | /* empty */

   40 Def: Specifier DecList SEMI
   41    | Specifier DecList error

   42 DecList: Dec
   43        | Dec COMMA DecList

   44 Dec: VarDec
   45    | VarDec ASSIGNOP Exp

   46 Exp: Exp ASSIGNOP Exp
   47    | Exp AND Exp
   48    | Exp OR Exp
   49    | Exp RELOP Exp
   50    | Exp PLUS Exp
   51    | Exp MINUS Exp
   52    | Exp STAR Exp
   53    | Exp DIV Exp
   54    | LP Exp RP
   55    | MINUS Exp
   56    | NOT Exp
   57    | ID LP Args RP
   58    | ID LP RP
   59    | Exp LB Exp RB
   60    | Exp DOT ID
   61    | ID
   62    | INT
   63    | FLOAT
   64    | Exp LB error

   65 Args: Exp COMMA Args
   66     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 2 9 36 37 41 64
LOWEST (258)
COMMA (259) 11 23 43 65
SEMI (260) 5 6 8 29 31 35 36 40
LC (261) 14 26
RC (262) 14 26
INT (263) 20 62
FLOAT (264) 63
ID (265) 16 18 19 21 22 57 58 60 61
SIMPLE_IF_STMT (266)
ELSE (267) 33
STRUCT (268) 14 15
RETURN (269) 31
IF (270) 32 33
WHILE (271) 34
ASSIGNOP (272) 45 46
OR (273) 48
AND (274) 47
RELOP (275) 49
MINUS (276) 51 55
PLUS (277) 50
STAR (278) 52
DIV (279) 53
NOT (280) 56
MINUS_NUM (281)
TYPE (282) 12
DOT (283) 60
RB (284) 20 59
LB (285) 20 59 64
RP (286) 21 22 32 33 34 54 57 58
LP (287) 21 22 32 33 34 54 57 58


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
Program (34)
    on left: 1 2, on right: 0
ExtDefList (35)
    on left: 3 4, on right: 1 2 3
ExtDef (36)
    on left: 5 6 7 8 9, on right: 3
ExtDecList (37)
    on left: 10 11, on right: 5 9 11
Specifier (38)
    on left: 12 13, on right: 5 6 7 8 9 25 40 41
StructSpecifier (39)
    on left: 14 15, on right: 13
OptTag (40)
    on left: 16 17, on right: 14
Tag (41)
    on left: 18, on right: 15
VarDec (42)
    on left: 19 20, on right: 10 11 20 25 44 45
FunDec (43)
    on left: 21 22, on right: 7 8
VarList (44)
    on left: 23 24, on right: 21 23
ParamDec (45)
    on left: 25, on right: 23 24
CompSt (46)
    on left: 26, on right: 7 30
StmtList (47)
    on left: 27 28, on right: 26 27
Stmt (48)
    on left: 29 30 31 32 33 34 35 36 37, on right: 27 32 33 34
DefList (49)
    on left: 38 39, on right: 14 26 38
Def (50)
    on left: 40 41, on right: 38
DecList (51)
    on left: 42 43, on right: 40 41 43
Dec (52)
    on left: 44 45, on right: 42 43
Exp (53)
    on left: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63
    64, on right: 29 31 32 33 34 37 45 46 47 48 49 50 51 52 53 54 55
    56 59 60 64 65 66
Args (54)
    on left: 65 66, on right: 57 65


state 0

    0 $accept: . Program $end

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 1

   14 StructSpecifier: STRUCT . OptTag LC DefList RC
   15                | STRUCT . Tag

    ID  shift, and go to state 8

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


state 2

   12 Specifier: TYPE .

    $default  reduce using rule 12 (Specifier)


state 3

    0 $accept: Program . $end

    $end  shift, and go to state 11


state 4

    1 Program: ExtDefList .
    2        | ExtDefList . error

    error  shift, and go to state 12

    $end  reduce using rule 1 (Program)


state 5

    3 ExtDefList: ExtDef . ExtDefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 4 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


state 6

    5 ExtDef: Specifier . ExtDecList SEMI
    6       | Specifier . SEMI
    7       | Specifier . FunDec CompSt
    8       | Specifier . FunDec SEMI
    9       | Specifier . ExtDecList error

    SEMI  shift, and go to state 14
    ID    shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


state 7

   13 Specifier: StructSpecifier .

    $default  reduce using rule 13 (Specifier)


state 8

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


state 9

   14 StructSpecifier: STRUCT OptTag . LC DefList RC

    LC  shift, and go to state 19


state 10

   15 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 15 (StructSpecifier)


state 11

    0 $accept: Program $end .

    $default  accept


state 12

    2 Program: ExtDefList error .

    $default  reduce using rule 2 (Program)


state 13

    3 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 3 (ExtDefList)


state 14

    6 ExtDef: Specifier SEMI .

    $default  reduce using rule 6 (ExtDef)


state 15

   19 VarDec: ID .
   21 FunDec: ID . LP VarList RP
   22       | ID . LP RP

    LP  shift, and go to state 20

    $default  reduce using rule 19 (VarDec)


state 16

    5 ExtDef: Specifier ExtDecList . SEMI
    9       | Specifier ExtDecList . error

    error  shift, and go to state 21
    SEMI   shift, and go to state 22


state 17

   10 ExtDecList: VarDec .
   11           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB

    COMMA  shift, and go to state 23
    LB     shift, and go to state 24

    $default  reduce using rule 10 (ExtDecList)


state 18

    7 ExtDef: Specifier FunDec . CompSt
    8       | Specifier FunDec . SEMI

    SEMI  shift, and go to state 25
    LC    shift, and go to state 26

    CompSt  go to state 27


state 19

   14 StructSpecifier: STRUCT OptTag LC . DefList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


state 20

   21 FunDec: ID LP . VarList RP
   22       | ID LP . RP

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2
    RP      shift, and go to state 31

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 33
    ParamDec         go to state 34


state 21

    9 ExtDef: Specifier ExtDecList error .

    $default  reduce using rule 9 (ExtDef)


state 22

    5 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 5 (ExtDef)


state 23

   11 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 35

    ExtDecList  go to state 36
    VarDec      go to state 17


state 24

   20 VarDec: VarDec LB . INT RB

    INT  shift, and go to state 37


state 25

    8 ExtDef: Specifier FunDec SEMI .

    $default  reduce using rule 8 (ExtDef)


state 26

   26 CompSt: LC . DefList StmtList RC

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 38
    Def              go to state 30


state 27

    7 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 7 (ExtDef)


state 28

   40 Def: Specifier . DecList SEMI
   41    | Specifier . DecList error

    ID  shift, and go to state 35

    VarDec   go to state 39
    DecList  go to state 40
    Dec      go to state 41


state 29

   14 StructSpecifier: STRUCT OptTag LC DefList . RC

    RC  shift, and go to state 42


state 30

   38 DefList: Def . DefList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    $default  reduce using rule 39 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 43
    Def              go to state 30


state 31

   22 FunDec: ID LP RP .

    $default  reduce using rule 22 (FunDec)


state 32

   25 ParamDec: Specifier . VarDec

    ID  shift, and go to state 35

    VarDec  go to state 44


state 33

   21 FunDec: ID LP VarList . RP

    RP  shift, and go to state 45


state 34

   23 VarList: ParamDec . COMMA VarList
   24        | ParamDec .

    COMMA  shift, and go to state 46

    $default  reduce using rule 24 (VarList)


state 35

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


state 36

   11 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 11 (ExtDecList)


state 37

   20 VarDec: VarDec LB INT . RB

    RB  shift, and go to state 47


state 38

   26 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 48
    SEMI    shift, and go to state 49
    LC      shift, and go to state 26
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 60
    Stmt      go to state 61
    Exp       go to state 62


state 39

   20 VarDec: VarDec . LB INT RB
   44 Dec: VarDec .
   45    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 63
    LB        shift, and go to state 24

    $default  reduce using rule 44 (Dec)


state 40

   40 Def: Specifier DecList . SEMI
   41    | Specifier DecList . error

    error  shift, and go to state 64
    SEMI   shift, and go to state 65


state 41

   42 DecList: Dec .
   43        | Dec . COMMA DecList

    COMMA  shift, and go to state 66

    $default  reduce using rule 42 (DecList)


state 42

   14 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 14 (StructSpecifier)


state 43

   38 DefList: Def DefList .

    $default  reduce using rule 38 (DefList)


state 44

   20 VarDec: VarDec . LB INT RB
   25 ParamDec: Specifier VarDec .

    LB  shift, and go to state 24

    $default  reduce using rule 25 (ParamDec)


state 45

   21 FunDec: ID LP VarList RP .

    $default  reduce using rule 21 (FunDec)


state 46

   23 VarList: ParamDec COMMA . VarList

    STRUCT  shift, and go to state 1
    TYPE    shift, and go to state 2

    Specifier        go to state 32
    StructSpecifier  go to state 7
    VarList          go to state 67
    ParamDec         go to state 34


state 47

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


state 48

   36 Stmt: error . SEMI

    SEMI  shift, and go to state 68


state 49

   35 Stmt: SEMI .

    $default  reduce using rule 35 (Stmt)


state 50

   62 Exp: INT .

    $default  reduce using rule 62 (Exp)


state 51

   63 Exp: FLOAT .

    $default  reduce using rule 63 (Exp)


state 52

   57 Exp: ID . LP Args RP
   58    | ID . LP RP
   61    | ID .

    LP  shift, and go to state 69

    $default  reduce using rule 61 (Exp)


state 53

   31 Stmt: RETURN . Exp SEMI

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 70


state 54

   32 Stmt: IF . LP Exp RP Stmt
   33     | IF . LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 71


state 55

   34 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 72


state 56

   55 Exp: MINUS . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 73


state 57

   56 Exp: NOT . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 74


state 58

   54 Exp: LP . Exp RP

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 75


state 59

   30 Stmt: CompSt .

    $default  reduce using rule 30 (Stmt)


state 60

   26 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 76


state 61

   27 StmtList: Stmt . StmtList

    error   shift, and go to state 48
    SEMI    shift, and go to state 49
    LC      shift, and go to state 26
    INT     shift, and go to state 50
    FLOAT   shift, and go to state 51
    ID      shift, and go to state 52
    RETURN  shift, and go to state 53
    IF      shift, and go to state 54
    WHILE   shift, and go to state 55
    MINUS   shift, and go to state 56
    NOT     shift, and go to state 57
    LP      shift, and go to state 58

    RC  reduce using rule 28 (StmtList)

    CompSt    go to state 59
    StmtList  go to state 77
    Stmt      go to state 61
    Exp       go to state 62


state 62

   29 Stmt: Exp . SEMI
   37     | Exp . error
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   64    | Exp . LB error

    error     shift, and go to state 78
    SEMI      shift, and go to state 79
    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    MINUS     shift, and go to state 84
    PLUS      shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


state 63

   45 Dec: VarDec ASSIGNOP . Exp

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 90


state 64

   41 Def: Specifier DecList error .

    $default  reduce using rule 41 (Def)


state 65

   40 Def: Specifier DecList SEMI .

    $default  reduce using rule 40 (Def)


state 66

   43 DecList: Dec COMMA . DecList

    ID  shift, and go to state 35

    VarDec   go to state 39
    DecList  go to state 91
    Dec      go to state 41


state 67

   23 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 23 (VarList)


state 68

   36 Stmt: error SEMI .

    $default  reduce using rule 36 (Stmt)


state 69

   57 Exp: ID LP . Args RP
   58    | ID LP . RP

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    RP     shift, and go to state 92
    LP     shift, and go to state 58

    Exp   go to state 93
    Args  go to state 94


state 70

   31 Stmt: RETURN Exp . SEMI
   46 Exp: Exp . ASSIGNOP Exp
   47    | Exp . AND Exp
   48    | Exp . OR Exp
   49    | Exp . RELOP Exp
   50    | Exp . PLUS Exp
   51    | Exp . MINUS Exp
   52    | Exp . STAR Exp
   53    | Exp . DIV Exp
   59    | Exp . LB Exp RB
   60    | Exp . DOT ID
   64    | Exp . LB error

    SEMI      shift, and go to state 95
    ASSIGNOP  shift, and go to state 80
    OR        shift, and go to state 81
    AND       shift, and go to state 82
    RELOP     shift, and go to state 83
    MINUS     shift, and go to state 84
    PLUS      shift, and go to state 85
    STAR      shift, and go to state 86
    DIV       shift, and go to state 87
    DOT       shift, and go to state 88
    LB        shift, and go to state 89


state 71

   32 Stmt: IF LP . Exp RP Stmt
   33     | IF LP . Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 96


state 72

   34 Stmt: WHILE LP . Exp RP Stmt

    INT    shift, and go to state 50
    FLOAT  shift, and go to state 51
    ID     shift, and go to state 52
    MINUS  shift, and go to state 56
    NOT    shift, and go to state 57
    LP     shift, and go to state 58

    Exp  go to state 97


state 73
